--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Tic Tac Toe</title>
 </head>
 
-<body>
+<body onload="init()">
     
+    <div id="content">
 
+    </div>
 
     <script src="script.js"></script>
 </body>
